--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server --config config/webpack.dev.ts",
+    "build": "webpack --config config/webpack.dev.ts"
+  },
   "dependencies": {
     "@emotion/core": "^10.0.9",
     "@emotion/styled": "^10.0.9",
@@ -21,6 +25,7 @@
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "@types/webpack": "^4.4.25",
+    "@types/webpack-dev-server": "^3.1.4",
     "@types/webpack-env": "^1.13.9",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-notifier": "^1.5.3",
@@ -29,6 +34,7 @@
     "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
     "ts-node": "^8.0.3",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslint": "^5.13.1",
@@ -39,5 +45,10 @@
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1",
     "webpack-notifier": "^1.7.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsc"
+    }
   }
 }
