--- a/package.json
+++ b/package.json
@@ -8,43 +8,43 @@
     "build": "webpack --config config/webpack.dev.ts"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.9",
-    "@emotion/styled": "^10.0.9",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "@emotion/core": "10.0.9",
+    "@emotion/styled": "10.0.9",
+    "react": "16.8.4",
+    "react-dom": "16.8.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/html-webpack-plugin": "^3.2.0",
-    "@types/react": "^16.8.7",
-    "@types/react-dom": "^16.8.2",
-    "@types/webpack": "^4.4.25",
-    "@types/webpack-dev-server": "^3.1.4",
-    "@types/webpack-env": "^1.13.9",
-    "@types/webpack-merge": "^4.1.3",
-    "@types/webpack-notifier": "^1.5.3",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-emotion": "^10.0.9",
-    "file-loader": "^3.0.1",
-    "fork-ts-checker-webpack-plugin": "^1.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.3.1",
-    "ts-node": "^8.0.3",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "tslint": "^5.13.1",
-    "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.3.3333",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-merge": "^4.2.1",
-    "webpack-notifier": "^1.7.0"
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.3.4",
+    "@babel/plugin-proposal-class-properties": "7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.3.4",
+    "@babel/preset-env": "7.3.4",
+    "@babel/preset-react": "7.0.0",
+    "@babel/preset-typescript": "7.3.3",
+    "@types/html-webpack-plugin": "3.2.0",
+    "@types/react": "16.8.7",
+    "@types/react-dom": "16.8.2",
+    "@types/webpack": "4.4.25",
+    "@types/webpack-dev-server": "3.1.4",
+    "@types/webpack-env": "1.13.9",
+    "@types/webpack-merge": "4.1.3",
+    "@types/webpack-notifier": "1.5.3",
+    "babel-loader": "8.0.5",
+    "babel-plugin-emotion": "10.0.9",
+    "file-loader": "3.0.1",
+    "fork-ts-checker-webpack-plugin": "1.0.0",
+    "html-webpack-plugin": "3.2.0",
+    "husky": "1.3.1",
+    "ts-node": "8.0.3",
+    "tsconfig-paths-webpack-plugin": "3.2.0",
+    "tslint": "5.13.1",
+    "tslint-config-standard": "8.0.1",
+    "typescript": "3.3.3333",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.2.3",
+    "webpack-dev-server": "3.2.1",
+    "webpack-merge": "4.2.1",
+    "webpack-notifier": "1.7.0"
   },
   "husky": {
     "hooks": {
