--- a/package.json
+++ b/package.json
@@ -5,50 +5,63 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --config config/webpack.dev.ts",
-    "build": "webpack --config config/webpack.dev.ts"
+    "build": "webpack --config config/webpack.dev.ts",
+    "prettier": "prettier --config .prettierrc.json --write \"./**/*.{js,ts,tsx}\""
   },
   "dependencies": {
-    "@emotion/core": "10.0.9",
-    "@emotion/styled": "10.0.9",
-    "react": "16.8.4",
-    "react-dom": "16.8.4"
+    "@emotion/core": "10.0.16",
+    "@emotion/styled": "10.0.15",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-router": "5.0.1",
+    "react-router-dom": "5.0.1"
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
-    "@babel/core": "7.3.4",
-    "@babel/plugin-proposal-class-properties": "7.3.4",
-    "@babel/plugin-proposal-object-rest-spread": "7.3.4",
-    "@babel/preset-env": "7.3.4",
+    "@babel/core": "7.2.2",
+    "@babel/plugin-proposal-class-properties": "7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.3.2",
+    "@babel/preset-env": "7.3.1",
     "@babel/preset-react": "7.0.0",
-    "@babel/preset-typescript": "7.3.3",
+    "@babel/preset-typescript": "7.1.0",
     "@types/html-webpack-plugin": "3.2.0",
-    "@types/react": "16.8.7",
-    "@types/react-dom": "16.8.2",
-    "@types/webpack": "4.4.25",
-    "@types/webpack-dev-server": "3.1.4",
-    "@types/webpack-env": "1.13.9",
+    "@types/react": "16.8.23",
+    "@types/react-dom": "16.8.0",
+    "@types/react-router": "5.0.3",
+    "@types/react-router-dom": "4.3.5",
+    "@types/webpack": "4.39.4",
+    "@types/webpack-dev-server": "^3.1.7",
+    "@types/webpack-env": "1.13.7",
     "@types/webpack-merge": "4.1.3",
     "@types/webpack-notifier": "1.5.3",
     "babel-loader": "8.0.5",
-    "babel-plugin-emotion": "10.0.9",
+    "babel-plugin-emotion": "10.0.7",
     "file-loader": "3.0.1",
-    "fork-ts-checker-webpack-plugin": "1.0.0",
+    "fork-ts-checker-webpack-plugin": "0.5.2",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
-    "ts-node": "8.0.3",
+    "lint-staged": "9.4.2",
+    "prettier": "1.18.2",
+    "ts-node": "8.3.0",
     "tsconfig-paths-webpack-plugin": "3.2.0",
-    "tslint": "5.13.1",
+    "tslint": "5.12.1",
     "tslint-config-standard": "8.0.1",
-    "typescript": "3.3.3333",
-    "webpack": "4.29.6",
+    "typescript": "3.6.2",
+    "webpack": "4.41.2",
     "webpack-cli": "3.2.3",
-    "webpack-dev-server": "3.2.1",
+    "webpack-dev-server": "3.1.14",
     "webpack-merge": "4.2.1",
     "webpack-notifier": "1.7.0"
   },
+  "lint-staged": {
+    "./**/*.{js,ts,tsx}": [
+      "prettier --config .prettierrc.json --write",
+      "git add"
+    ]
+  },
   "husky": {
     "hooks": {
-      "pre-commit": "tsc"
+      "pre-commit": "lint-staged"
     }
   }
 }
